# eikonal

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py
eikonal/: cllinear.py  data.py  geikonal.py  linear.py
eikonal/vis/: ray.py
licences/: ACADEMIC-LICENSE
src/eikonal/: raytrace.pxd  solver.pxd
templates/: narray.hpp.mako  nvect.hpp.mako  raytrace.hpp.mako  raytrace.pyx.mako  solver.hpp.mako  solver.pyx.mako
templates/unittest/: test_vect.cpp.mako
test/: spmv.py
unittest/: test_nvect.cpp
