[tool.poetry]
name = "eikonal"
version = "0.1.0"
description = ""
authors = ["Jean-Pascal Mercier <jp.mercier@gmail.com>"]
license = "MIT"
build = "setup.py"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Cython = "^0.29.27"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
checkerboard = "bin:checkerboard"
conjugate_gradient = "bin:conjugate_gradient"
cross_sensitivity = "bin:cross_sensitivity"
double_difference = "bin:double_difference"
eikonal_solver = "bin:eikonal_solver"
export_txt_grid = "bin:export_txt_grid"
raytrace = "bin:raytrace"
raytrace_2 = "bin:raytrace_2"
sensitivity = "bin:sensitivity"
traveltime = "bin:traveltime"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
